--- a/src/Example/ReportPortal.conf
+++ b/src/Example/ReportPortal.conf
@@ -5,7 +5,8 @@
     "project": "default_project",
     "authentication": {
       "uuid": "aa19555c-c9ce-42eb-bb11-87757225d535"
-    }
+    },
+    /* "proxy": "http://host:port" */
   },
   "launch": {
     "name": "NUnit 3 Demo Launch",
