--- a/src/Example/packages.config
+++ b/src/Example/packages.config
@@ -4,8 +4,8 @@
   <package id="NUnit" version="3.6.0" targetFramework="net45" />
   <package id="NUnit.Engine" version="3.6.0" targetFramework="net45" />
   <package id="NUnit.Engine.Api" version="3.6.0" targetFramework="net45" />
-  <package id="ReportPortal.Client" version="1.2.6" targetFramework="net45" />
-  <package id="ReportPortal.NUnit" version="3.0.0-beta-21" targetFramework="net45" />
-  <package id="ReportPortal.Shared" version="1.1.3" targetFramework="net45" />
+  <package id="ReportPortal.Client" version="1.2.7" targetFramework="net45" />
+  <package id="ReportPortal.NUnit" version="3.1.0" targetFramework="net45" />
+  <package id="ReportPortal.Shared" version="1.3.0" targetFramework="net45" />
   <package id="RestSharp" version="105.2.3" targetFramework="net45" />
 </packages>
