Added log4net logger

--- a/src/Example/app.config
+++ b/src/Example/app.config
@@ -1,10 +1,25 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
+  <configSections>
+    <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net" />
+  </configSections>
+  <log4net>
+    <appender name="RP" type="ReportPortal.Log4Net.ReportPortalAppender, ReportPortal.Log4Net">
+      <layout type="log4net.Layout.SimpleLayout" />
+      <layout type="log4net.Layout.PatternLayout">
+        <conversionpattern value="%message%newline" />
+      </layout>
+    </appender>
+    <root>
+      <level value="DEBUG" />
+      <appender-ref ref="RP" />
+    </root>
+  </log4net>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
         <assemblyIdentity name="nunit.framework" publicKeyToken="2638cd05610744eb" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-3.8.1.0" newVersion="3.8.1.0" />
+        <bindingRedirect oldVersion="0.0.0.0-3.9.0.0" newVersion="3.9.0.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
