--- a/src/Example/packages.config
+++ b/src/Example/packages.config
@@ -1,8 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="NUnit" version="3.8.1" targetFramework="net45" />
-  <package id="NUnit.Engine.Api" version="3.7.0" targetFramework="net45" />
-  <package id="ReportPortal.Client" version="2.0.0-beta3" targetFramework="net45" />
-  <package id="ReportPortal.NUnit" version="3.3.0-beta1" targetFramework="net45" />
-  <package id="ReportPortal.Shared" version="2.0.0-beta2" targetFramework="net45" />
+  <package id="log4net" version="2.0.8" targetFramework="net45" />
+  <package id="NUnit" version="3.9.0" targetFramework="net45" />
+  <package id="NUnit.Engine.Api" version="3.8.0" targetFramework="net45" />
+  <package id="ReportPortal.Client" version="2.0.0" targetFramework="net45" />
+  <package id="ReportPortal.Log4Net" version="1.1.5-beta2" targetFramework="net45" />
+  <package id="ReportPortal.NUnit" version="3.3.0-beta2" targetFramework="net45" />
+  <package id="ReportPortal.Shared" version="2.0.0-beta4" targetFramework="net45" />
 </packages>
