--- a/src/Example/packages.config
+++ b/src/Example/packages.config
@@ -3,8 +3,9 @@
   <package id="log4net" version="2.0.8" targetFramework="net45" />
   <package id="NUnit" version="3.10.1" targetFramework="net45" />
   <package id="NUnit.Engine.Api" version="3.8.0" targetFramework="net45" />
+  <package id="NUnit3TestAdapter" version="3.10.0" targetFramework="net45" />
   <package id="ReportPortal.Client" version="2.0.5" targetFramework="net45" />
   <package id="ReportPortal.Log4Net" version="1.2.1" targetFramework="net45" />
-  <package id="ReportPortal.NUnit" version="3.3.8" targetFramework="net45" />
-  <package id="ReportPortal.Shared" version="2.0.4" targetFramework="net45" />
+  <package id="ReportPortal.NUnit" version="3.3.10" targetFramework="net45" />
+  <package id="ReportPortal.Shared" version="2.0.5" targetFramework="net45" />
 </packages>
