--- a/src/Example/Example.csproj
+++ b/src/Example/Example.csproj
@@ -43,8 +43,8 @@
     <Reference Include="nunit.framework, Version=3.10.1.0, Culture=neutral, PublicKeyToken=2638cd05610744eb, processorArchitecture=MSIL">
       <HintPath>..\packages\NUnit.3.10.1\lib\net45\nunit.framework.dll</HintPath>
     </Reference>
-    <Reference Include="ReportPortal.Client, Version=2.0.5.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\ReportPortal.Client.2.0.5\lib\net45\ReportPortal.Client.dll</HintPath>
+    <Reference Include="ReportPortal.Client, Version=2.1.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\ReportPortal.Client.2.1.0\lib\net45\ReportPortal.Client.dll</HintPath>
     </Reference>
     <Reference Include="ReportPortal.Log4Net, Version=1.2.1.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\ReportPortal.Log4Net.1.2.1\lib\net45\ReportPortal.Log4Net.dll</HintPath>
@@ -52,8 +52,8 @@
     <Reference Include="ReportPortal.NUnitExtension, Version=3.3.10.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\ReportPortal.NUnit.3.3.10\lib\net45\ReportPortal.NUnitExtension.dll</HintPath>
     </Reference>
-    <Reference Include="ReportPortal.Shared, Version=2.0.5.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\ReportPortal.Shared.2.0.5\lib\net45\ReportPortal.Shared.dll</HintPath>
+    <Reference Include="ReportPortal.Shared, Version=2.0.6.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\ReportPortal.Shared.2.0.6\lib\net45\ReportPortal.Shared.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -65,6 +65,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Tests\Class3.cs" />
     <Compile Include="Tests\FailedClass.cs" />
     <Compile Include="Tests\EmptyClass.cs" />
     <Compile Include="Tests\IgnoredClass.cs" />
