--- a/src/Example/Example.csproj
+++ b/src/Example/Example.csproj
@@ -49,8 +49,8 @@
     <Reference Include="ReportPortal.Log4Net, Version=1.2.1.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\ReportPortal.Log4Net.1.2.1\lib\net45\ReportPortal.Log4Net.dll</HintPath>
     </Reference>
-    <Reference Include="ReportPortal.NUnitExtension, Version=3.3.10.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\ReportPortal.NUnit.3.3.10\lib\net45\ReportPortal.NUnitExtension.dll</HintPath>
+    <Reference Include="ReportPortal.NUnitExtension, Version=3.3.11.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\ReportPortal.NUnit.3.3.11\lib\net45\ReportPortal.NUnitExtension.dll</HintPath>
     </Reference>
     <Reference Include="ReportPortal.Shared, Version=2.0.6.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\ReportPortal.Shared.2.0.6\lib\net45\ReportPortal.Shared.dll</HintPath>
@@ -73,6 +73,8 @@
     <Compile Include="Tests\Class1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ReportPortalCustomization\Customization.cs" />
+    <Compile Include="Tests\InnerFolder\Class1.cs" />
+    <Compile Include="Tests\InnerFolder\ClassFixtureSetup.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
