--- a/src/Example/ReportPortal.config.json
+++ b/src/Example/ReportPortal.config.json
@@ -2,7 +2,7 @@
   "$schema": "https://raw.githubusercontent.com/reportportal/agent-net-nunit/master/ReportPortal.NUnitExtension/ReportPortal.config.schema",
   "enabled": true,
   "server": {
-    "url": "https://rp.epam.com/api/v1/",
+    "url": "http://rpproxy.epm-iass.projects.epam.com/api/v1/",
     "project": "default_project",
     "authentication": {
       "uuid": "7853c7a9-7f27-43ea-835a-cab01355fd17"
