Provide example with skipping rootnamespaces

--- a/src/Example/ReportPortal.config.json
+++ b/src/Example/ReportPortal.config.json
@@ -13,5 +13,6 @@
     "description": "this is description",
     "debugMode": true,
     "tags": [ "t1", "t2" ]
-  }
+  },
+  "rootNamespaces": [ "Example.dll", "Example.Tests" ]
 }
