--- a/src/Example/packages.config
+++ b/src/Example/packages.config
@@ -5,7 +5,10 @@
   <package id="NUnit.Engine.Api" version="3.10.0" targetFramework="net45" />
   <package id="NUnit3TestAdapter" version="3.13.0" targetFramework="net45" />
   <package id="ReportPortal.Client" version="2.1.12" targetFramework="net45" />
+  <package id="ReportPortal.Extensions.SourceBack" version="1.0.6" targetFramework="net45" />
   <package id="ReportPortal.Log4Net" version="1.2.2" targetFramework="net45" />
   <package id="ReportPortal.NUnit" version="3.7.4" targetFramework="net45" />
   <package id="ReportPortal.Shared" version="2.2.0" targetFramework="net45" />
+  <package id="System.Collections.Immutable" version="1.5.0" targetFramework="net45" />
+  <package id="System.Reflection.Metadata" version="1.6.0" targetFramework="net45" />
 </packages>
