--- a/src/Example/ReportPortal.config.json
+++ b/src/Example/ReportPortal.config.json
@@ -1,13 +1,13 @@
 ﻿{
   "$schema": "https://raw.githubusercontent.com/reportportal/agent-net-nunit/master/ReportPortal.NUnitExtension/ReportPortal.config.schema",
   "enabled": true,
-  "server": {
-    "url": "https://rp.epam.com/api/v1/",
-    "project": "default_project",
-    "authentication": {
-      "uuid": "ba7eb7c8-7b33-42f6-8cf0-e9cd26e717f4"
-    }
-  },
+	"server": {
+		"url": "https://web.demo.reportportal.io/api/v1/",
+		"project": "default_personal",
+		"authentication": {
+			"uuid": "e1cc1fff-465e-4a78-aef9-f716652482b8"
+		}
+	},
   "launch": {
     "name": "NUnit 3 Demo Launch",
     "description": "this is description",
