--- a/src/Example/packages.config
+++ b/src/Example/packages.config
@@ -7,7 +7,7 @@
   <package id="ReportPortal.Client" version="2.1.15" targetFramework="net45" />
   <package id="ReportPortal.Extensions.SourceBack" version="1.1.1" targetFramework="net45" />
   <package id="ReportPortal.Log4Net" version="1.2.3" targetFramework="net45" />
-  <package id="ReportPortal.NUnit" version="3.7.11" targetFramework="net45" />
+  <package id="ReportPortal.NUnit" version="3.7.12-beta.900" targetFramework="net45" />
   <package id="ReportPortal.Shared" version="2.4.4" targetFramework="net45" />
   <package id="System.Collections.Immutable" version="1.5.0" targetFramework="net45" />
   <package id="System.Reflection.Metadata" version="1.6.0" targetFramework="net45" />
