Copy to config file to output folder

--- a/src/Example/Example.csproj
+++ b/src/Example/Example.csproj
@@ -94,7 +94,9 @@
     <None Include="packages.config">
       <SubType>Designer</SubType>
     </None>
-    <None Include="ReportPortal.config.json" />
+    <None Include="ReportPortal.config.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <Service Include="{82A7F48D-3B50-4B1E-B82E-3ADA8210C358}" />
