--- a/src/Example/Example.csproj
+++ b/src/Example/Example.csproj
@@ -77,6 +77,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Tests\Class4.cs" />
     <Compile Include="Tests\Class3.cs" />
     <Compile Include="Tests\FailedClass.cs" />
     <Compile Include="Tests\EmptyClass.cs" />
