--- a/src/Example/packages.config
+++ b/src/Example/packages.config
@@ -7,7 +7,7 @@
   <package id="ReportPortal.Client" version="3.0.0-alpha.15" targetFramework="net45" />
   <package id="ReportPortal.Extensions.SourceBack" version="2.0.0-alpha.5" targetFramework="net45" />
   <package id="ReportPortal.Log4Net" version="2.0.0-alpha.1" targetFramework="net45" />
-  <package id="ReportPortal.NUnit" version="4.0.0-dev.901" targetFramework="net45" />
+  <package id="ReportPortal.NUnit" version="4.0.0-alpha.9" targetFramework="net45" />
   <package id="ReportPortal.Shared" version="3.0.0-alpha.50" targetFramework="net45" />
   <package id="System.Collections.Immutable" version="1.7.0" targetFramework="net45" />
   <package id="System.Reflection.Metadata" version="1.8.0" targetFramework="net45" />
